# cuda-nvcc-feedstock

./: .travis.yml  README.md  conda-forge.yml
.azure-pipelines/: azure-pipelines-linux.yml  azure-pipelines-win.yml
.ci_support/: linux_64_.yaml  linux_64_DEFAULT_CUDAARCHS50-real;5_h4e26ded4b9.yaml  linux_64_DEFAULT_CUDAARCHS50-real;5_h4eb5271161.yaml  linux_64_DEFAULT_CUDAARCHS50-real;5_h6541862759.yaml  linux_64_DEFAULT_CUDAARCHS50-real;5_hda574178f1.yaml  linux_64_DEFAULT_CUDAARCHS50-real;5_hff95ef549b.yaml  linux_64_DEFAULT_CUDAARCHS72-real;87-real;101f-real;101-virtualDEFAULT_TORCH_CUDA_ARCH_LIST7.2;8.7;10.1+PTXarm_variant_targettegracross_target_platformlinux-aarch64.yaml  linux_64_DEFAULT_CUDAARCHS72-real;87-real;101f-real;101-virtualarm_variant_targettegracross_target_platformlinux-aarch64.yaml  linux_64_DEFAULT_CUDAARCHS72-real;87DEFAULT_TORCH_CUDA_ARCH_LIST7.2;8.7+PTXarm_variant_targettegracross_target_platformlinux-aarch64.yaml  linux_64_DEFAULT_CUDAARCHS75-real;80-real;86-real;87-real;89-real;90a-real;100f-real;103f-real;110-real;120a-real;121f-real;121-virtualDEFAULT_NVCC_GENCODE-gencode_arch=_h16c6dea6.yaml  linux_64_DEFAULT_CUDAARCHS75-real;80-real;86-real;89-real;90a-real;100f-real;103f-real;120a-real;121f-real;121-virtualarm_variant_targetNonecross_target_platformlinux-64.yaml  linux_64_cross_target_impl_platformlinux-64.yaml  (+28 more)
recipe/: CMakeLists.txt  activate.bat  activate.sh  bld.bat  build.sh  conda_build_config.yaml  deactivate.bat  deactivate.sh  meta.yaml  run_cmake_cuda_tests.sh  run_nvcc_tests.bat  run_nvcc_tests.sh  test.cpp  test.cu
(+1 files in other folders)
